# AgentWatch

./: .env.example  DESIGN_DOC.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agentwatch/: __init__.py  config.py
agentwatch/agent/: failure_injector.py  support_agent.py  tools.py
agentwatch/api/: main.py  schemas.py
agentwatch/api/routes/: discovery.py  issues.py  traces.py
agentwatch/classifier/: benchmarks.py  few_shot_trainer.py  issue_detector.py  llm_judge.py
agentwatch/db/: __init__.py  database.py  models.py
agentwatch/discovery/: cluster.py
agentwatch/traces/: models.py
dashboard/: package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/components/: IssueCreator.tsx  IssueList.tsx  TraceViewer.tsx
dashboard/lib/: api.ts
scripts/: demo.py  generate_traces.py  run_server.py
tests/: test_classifier.py
